Fix section spacing

--- a/css/screen.css
+++ b/css/screen.css
@@ -48,13 +48,21 @@ form .field.submit-field {
 }
 
 @media (max-width: 560px) {
+  html {
+    font-size: 1.05em;
+  }
   form label {
     display: block;
+    width: fit-content;
   }
   form input {
     display: block;
     margin: 0.25em 0;
     width: calc(100% - 10px);
+  }
+  section {
+    margin: 5px;
+    max-width: 100%;
   }
 }
 
